[package]
name = "usermode-helper"
version = "0.1.0"
authors = ["Tycho Andersen <tycho@tycho.pizza>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tych0/huldufolk"
repository = "https://github.com/tych0/huldufolk"
edition = "2024"

[dependencies]
caps = "0.5"
libc = "0.2"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
